--- a/Singleton-Pattern/01.ipynb
+++ b/Singleton-Pattern/01.ipynb
@@ -82,20 +82,158 @@
    "source": [
     "模块化\n",
     "直接导入后使用, logger.log_message()\n",
-    "logger.py\n",
+    "  \n",
     "~~~python\n",
+    "# logger.py\n",
     "def log_message(msg):\n",
     "    with open(\"/var/log/filename.log\", \"a\") as log_file:\n",
     "        log_file.write(\"{0}\\n\".format(msg))\n",
     "~~~\n",
     "\n",
-    "main.py\n",
     "~~~python\n",
+    "# main.py\n",
     "import logger\n",
     "\n",
     "for i in range(4):\n",
     "    logger.log_message(\"log message {}\".format(i))\n",
     "~~~"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "74f57eb6",
+   "metadata": {},
+   "source": [
+    "用类的方式重写一下,主要关注如何调用  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6e7a4d28",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# logger_class.py\n",
+    "class Logger(object):\n",
+    "    \"\"\"A file-based message logger with the following properties\n",
+    "    \n",
+    "    Attributes:\n",
+    "        file_name: a string representing the full path of the log file to which\n",
+    "        this logger will write its messages\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    def __init__(self, file_name):\n",
+    "        \"\"\"Return a Logger object whose file_name is *file_name*\"\"\"\n",
+    "        self.file_name = file_name\n",
+    "    \n",
+    "    def _write_log(self, level, msg):\n",
+    "        \"\"\"Writes a message to the file_name for a specific Logger instance\"\"\"\n",
+    "        with open(self.file_name, \"a\") as log_file:\n",
+    "            log_file.write(\"[{0}] {1}\\n\".format(level, msg))\n",
+    "    \n",
+    "    def critical(self, level, msg):\n",
+    "        self._write_log(\"CRITICAL\", msg)\n",
+    "    \n",
+    "    def error(self, level, msg):\n",
+    "        self._write_log(\"ERROR\", msg)\n",
+    "    \n",
+    "    def warn(self, level, msg):\n",
+    "        self._write_log(\"WARN\", msg)\n",
+    "    \n",
+    "    def info(self, level, msg):\n",
+    "        self._write_log(\"INFO\", msg)\n",
+    "    \n",
+    "    def debug(self, level, msg):\n",
+    "        self._write_log(\"DEBUG\", msg)\n",
+    "\n",
+    "# from logger_class import Logger\n",
+    "logger_object = Logger(\"class_logger.log\")\n",
+    "logger_object.info(\"Initialization\", \"Logger initialized successfully.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f0f256b0",
+   "metadata": {},
+   "source": [
+    "实用化,改造成单例  \n",
+    "对比原型,只改了路径,然后做了接口调用,但日志等级没做,这是框架的事      \n",
+    "\n",
+    "嵌套类结构：  \n",
+    "外层 SingletonObject 是代理类  \n",
+    "内层 __SingletonObject (双下划线表示私有类)是实际实现类  \n",
+    "\n",
+    "核心机制：  \n",
+    "instance 类变量保存唯一实例  \n",
+    "__new__ 控制实例创建，确保只生成一个实例  \n",
+    "__getattr__/__setattr__ 将所有操作委托给内部实例  \n",
+    "\n",
+    "属性存储：  \n",
+    "val 是存储在实例中的任意值  \n",
+    "__str__ 提供对象的字符串表示  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "ab03b4db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# singleton_object.py\n",
+    "class SingletonObject(object):\n",
+    "    class __SingletonObject():\n",
+    "        def __init__(self):\n",
+    "            # self.log_file = \"myapp.log\"  # 默认日志文件路径\n",
+    "            self.log_file = \"/var/log/myapp.log\"  # 默认日志文件路径\n",
+    "            \n",
+    "        def log(self, message):\n",
+    "            with open(self.log_file, \"a\") as f:\n",
+    "                f.write(f\"{message}\\n\")\n",
+    "                \n",
+    "        def set_log_file(self, path):\n",
+    "            self.log_file = path\n",
+    "\n",
+    "    instance = None\n",
+    "\n",
+    "    def __new__(cls):\n",
+    "        if not SingletonObject.instance:\n",
+    "            SingletonObject.instance = SingletonObject.__SingletonObject()\n",
+    "        return SingletonObject.instance\n",
+    "\n",
+    "    def __getattr__(self, name):\n",
+    "        return getattr(self.instance, name)\n",
+    "\n",
+    "    def __setattr__(self, name, value):\n",
+    "        return setattr(self.instance, name, value)\n",
+    "    \n",
+    "# logger.py\n",
+    "# from singleton_object import SingletonObject\n",
+    "\n",
+    "logger = SingletonObject()\n",
+    "\n",
+    "def log_message(msg):\n",
+    "    logger.log(msg)\n",
+    "    \n",
+    "def set_log_path(path):\n",
+    "    logger.set_log_file(path)  \n",
+    "\n",
+    "# from logger import log_message, set_log_path\n",
+    "\n",
+    "# 可以自定义日志路径(可选)\n",
+    "set_log_path(\"my_custom.log\")\n",
+    "# set_log_path(\"/var/log/my_custom.log\")\n",
+    "\n",
+    "# 记录日志\n",
+    "log_message(\"应用程序启动\")\n",
+    "log_message(\"正在处理数据...\")\n",
+    "log_message(\"操作完成\")\n",
+    "\n",
+    "\n",
+    "# another_file.py\n",
+    "# from logger import log_message\n",
+    "log_message(\"从另一个模块记录日志\")    "
    ]
   }
  ],
